--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Windows 10 Concept (Beta Version)</title>
+  <title>Breadindows</title>
   <link rel="stylesheet" href="./style.css">
   <link rel="shortcut icon" href="1200px-Windows_logo_-_2012.svg.png">
 
